<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">To Don\'t</string>
    <string-array name="languages">
        <item>Select Language</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>German</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>French</item>
    </string-array>

    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string name="delete_habit">Are you sure you want to delete this habit?</string>
    <string name="LightMode">To Don\'t</string>
    <string name="onboarding_reverse">The reverse to-do list</string>
    <string name="onboarding_bad">Jot down your bad habits. Every day, cross</string>
    <string name="onboarding_gavein">out those you gave in to. And the next</string>
    <string name="onboarding_freshlist">morning start off with the fresh list.</string>
    <string name="onboarding_continue">Continue</string>
    <string name="avoided">Avoided</string>
    <string name="done">Done</string>
    <string name="habits">Habits</string>
    <string name="today">Today</string>
    <string name="log">Log</string>
    <string name="about">About</string>
    <string name="labels">Labels</string>
    <string name="new_labels">New Labels</string>
    <string name="time">Time</string>
    <string name="frequncy">Frequency</string>
    <string name="settings">Settings</string>
    <string name="mostav">Most avoided:</string>
    <string name="leastav">Least avoided:</string>
    <string name="addlabel">Please add a label first</string>
    <string name="addnewlabel">Add new label</string>
    <string name="addtask">Enter Bad Habit</string>
    <string name="note">Description</string>
    <string name="save">Save</string>
    <string name="puthabit">To start off, put down a bad habit</string>
    <string name="habitswillshowuphere">Habits will show up here</string>
    <string name="apachelicense">Apache License 2.0</string>
    <string name="developer">Developer</string>
    <string name="contribute">Contribute</string>
    <string name="translate">Translate</string>
    <string name="report">Report a problem</string>
    <string name="source">View source</string>
    <string name="opensourcelicense">Open-source licences</string>
    <string name="appearance">Appearance</string>
    <string name="monitor_error">Monitor errors</string>
    <string name="monitor_information">Use Sentry to auto-report issues for faster bug fixes and improved stability. Only essential technical data is collected.</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="update">Update</string>
    <string name="feather">Feather Icons</string>
    <string name="mitlicence">MIT License</string>
    <string name="materialspinner">MaterialSpinner</string>
    <string name="followsys">Follow System</string>
    <string name="eclipse">Eclipse Public License 1.0</string>
    <string name="gnu">GNU General Public License CE</string>
        <string name="d">D</string>
    <string name="Notification_scheduled">Notification scheduled</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="y">Y</string>
    <string name="out_of">" out of "</string>
    <string name="habits_are_avoided">" habits are avoided"</string>
    <string name="habits_are_avoided_way_to_go">" habits are avoided, way to go!"</string>
    <string name="avoided_">Avoided</string>
    <string name="habits_">Habits</string>
    <string name="delete">Do you really want to delete this?</string>
    <string name="no">No</string>
    <string name="deletes">Do you really want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="please_add_a_label_first">Please Add a Label First</string>
    <string name="do_you_really_want_to_delete_this">Do you really want to delete this?</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="mark_as_done_or_avoided">Mark as done or avoided.</string>
    <string name="help_make_to_don_t_better">Help make \"To Don\'t\" better.</string>
    <string name="todon_t_reminder">ToDon\'t Reminder</string>
    <string name="mark_your_todon_t_task">"Mark your ToDon't task "</string>
    <string name="to_start_off_put_down_a_bad_habit">To Start Off, put down a bad habit.</string>
    <string name="view_your_stats">View your stats.</string>
    <string name="add_label">Add Label.</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_app_requires_access_to_your_external_storage_to_restore_the_database_please_enable_this_permission_in_the_app_settings">This app requires access to your external storage to restore the database. Please enable this permission in the app settings.</string>
    <string name="open_settings">Open Settings</string>
    <string name="select_repetition_frequency">Select Repetition Frequency</string>
    <string name="once">Once</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="do_you_really_want_to_delete_this_this_will_also_delete_all_habits_related_to_this_label">Do you really want to delete this?\nThis will also delete all habits related to this label.</string>
    <string name="data">Data</string>
    <string name="add_daily_notification">Add daily notification</string>
    <string name="back_up">Back up</string>
    <string name="restore">Restore</string>

    <string-array name="spinner_array">
        <item>Social</item>
        <item>Foods And Drinks</item>
        <item>Studies</item>
    </string-array>
    
    # Toasts
    <string name="toast_system">To Don\'t now follows your system.</string>
    <string name="toast_light">To Don\'t is on the light side now.</string>
    <string name="toast_dark">To Don\'t is on the dark side now.</string>

    # Here are the non-translateable strings
    <string name="crazymarvin" translatable="false">Crazy Marvin</string>
    <string name="codeacquaria" translatable="false">Code Acquaria</string>
    <string name="text" translatable="false"> <a href="https://mail.google.com/mail/u/0/#search/arafaatqureshi%40gmail.com?compose=new">Link</a> Hello blank fragment</string>
    <string name="ShowCaseView" translatable="false">ShowCaseView</string>
    <string name="showCaseViewLink" translatable="false">https://github.com/mreram/ShowCaseView?</string>
    <string name="nobobutton" translatable="false">NoboButton</string>
    <string name="circleimg" translatable="false">CircleImageView</string>
    <string name="mpandroidchart" translatable="false">MPAndroidChart</string>
    <string name="junit" translatable="false">JUnit</string>
    <string name="jetpack" translatable="false">Android Jetpack</string>
    <string name="kotlin" translatable="false">Kotlin</string>
    <string name="java" translatable="false">Java</string>
    <string name="dracula" translatable="false">Dracula</string>
    <string name="dracula_pro_blade" translatable="false">Dracula PRO Blade</string>
    <string name="dracula_pro_buffy" translatable="false">Dracula PRO Buffy</string>
    <string name="dracula_pro_alucard" translatable="false">Dracula Pro Alucard</string>
    <string name="dracula_pro" translatable="false">Dracula Pro</string>
    
    # Here are the contentDescription strings (for impaired users) starting with
    "contentDescription_"
    <string name="contentDescription_FAB">Add new To Don\'t item</string>
    
</resources>
