<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/congratulation_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners"

        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?attr/colorOnSurface1"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/appearance"
            android:textSize="20sp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <RadioButton
                android:id="@+id/followsys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/followsys"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/light"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dark"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp" />
            <RadioButton
                android:id="@+id/dracula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dracula"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/dracula_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dracula_pro"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp"
                android:visibility="visible" />
            <RadioButton
                android:id="@+id/dracula_pro_alucard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dracula_pro_alucard"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/dracula_pro_buffy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dracula_pro_buffy"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/dracula_pro_blade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dracula_pro_blade"
                android:textColor="?attr/colorOnSurface1"
                android:textSize="16sp"
                android:visibility="visible" />
        </RadioGroup>

        <TextView
            android:id="@+id/btndone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:text="@string/done"
            android:textSize="18sp"
            android:textColor="?attr/colorAccent"
            />


    </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>