<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorBackground"
    tools:context=".OnBoardingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="60dp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:elevation="6dp"
            android:layout_gravity="center"
            android:src="@drawable/onboard"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/onboarding_reverse"
            android:textColor="?attr/colorOnBackground1"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/onboarding_bad"
            android:textColor="?attr/colorOnBackground2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/onboarding_gavein"
            android:textColor="?attr/colorOnBackground2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/onboarding_freshlist"
            android:textColor="?attr/colorOnBackground2"
            android:textSize="14sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btncontinue"
        style="@style/Widget.Todont.GradButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:text="@string/onboarding_continue"
        android:textAllCaps="false"
        app:backgroundTint="@color/light_button_grad_end"
        android:textColor="?attr/colorOnBackground1" />
</RelativeLayout>