<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomsheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundcolor"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addtask"
        android:textColor="@color/textcolor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/habit"
        android:hint="@string/note"
        android:textColor="@color/textcolor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/detail"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/addlabel"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/detail"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-7dp"
        android:backgroundTint="@color/g2" />

    <View
        android:layout_width="240dp"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:background="@color/g2"
        android:layout_below="@id/spinner"/>


    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundbutton"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>