<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:padding="8dp">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/grad_tab_back"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp"
                android:weightSum="4">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/day"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/d"
                    android:textColor="?attr/colorOnTopBarContainer1"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/week"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/w"
                    android:textColor="?attr/colorOnTopBarContainer1"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/month"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/m"
                    android:textColor="?attr/colorOnTopBarContainer1"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/year"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/y"
                    android:textColor="?attr/colorOnTopBarContainer1"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>


        <FrameLayout
            android:id="@+id/containerLogFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/myinnergradientlogs"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dhabits"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/habits"
                    android:textColor="?attr/colorOnBackgroundContainer1"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/davoided"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/avoided"
                    android:textColor="?attr/colorOnBackgroundContainer1"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ddone"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:text="@string/done"
                    android:textColor="?attr/colorOnBackgroundContainer1"
                    android:textSize="12sp" />


            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/containerLogDailyFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
</FrameLayout>