<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomsheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/updatehabit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/addtask"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:autofillHints="" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_label_light"
            android:layout_height="wrap_content">

        </ImageView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_delete"
            android:layout_gravity="center"

            android:layout_height="wrap_content">

        </ImageView>

    </LinearLayout>


    <EditText
        android:id="@+id/updatedetail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/note"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/updatedetail"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/addlabel"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/updatespinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/updatedetail"
        android:layout_marginLeft="5dp"
        android:backgroundTint="@color/g2"
        />
    <View
        android:layout_width="240dp"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:background="@color/g2"
        android:layout_below="@id/updatespinner"/>


    <Button
        android:id="@+id/updateTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updatespinner"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundbutton"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>