<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".fragments.FragmentToday">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/gradient_background">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/grad_tab_back"
                android:padding="3dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="60dp"-->
                <!--            android:background="@drawable/gradient_background"-->
                <!--            android:gravity="center"-->
                <!--            android:orientation="horizontal">-->

                <!--            <LinearLayout-->
                <!--                android:layout_width="fill_parent"-->
                <!--                android:layout_height="50dp"-->
                <!--                android:layout_marginStart="2dp"-->
                <!--                android:layout_marginEnd="2dp"-->
                <!--                android:background="@drawable/gradient_background"-->
                <!--                android:elevation="5dp"-->
                <!--                android:gravity="center"-->
                <!--                android:orientation="horizontal"-->
                <!--                android:weightSum="3">-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/habits"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/habits"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/avoided"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/avoided"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/done"
                    style="@style/Widget.Todont.Button"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/done"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp" />
                <!--            </LinearLayout>-->
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/containerTodayFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>
</FrameLayout>